bhw: add variables formatting

--- a/Mini_Project/variables.tex
+++ b/Mini_Project/variables.tex
@@ -1,34 +1,46 @@
-\newcommand{\params_J}{100}
-\newcommand{\params_J}{100}
-\newcommand{\params_edu_types}{['H', 'L']}
-\newcommand{\params_race_types}{['White', 'Black']}
-\newcommand{\params_gamma_HH}{-0.2}
-\newcommand{\params_gamma_HL}{0.5}
-\newcommand{\params_gamma_LL}{-0.5}
-\newcommand{\params_gamma_LH}{0.7}
-\newcommand{\params_alpha_HH}{0.8}
-\newcommand{\params_alpha_HL}{0.1}
-\newcommand{\params_alpha_LH}{0.2}
-\newcommand{\params_alpha_LL}{0.7}
-\newcommand{\params_iota}{0.05}
-\newcommand{\params_phi}{1}
-\newcommand{\params_phi_geo}{0.3}
-\newcommand{\params_phi_reg}{0.4}
-\newcommand{\params_phi_a}{0.5}
-\newcommand{\params_zeta}{0.8}
-\newcommand{\params_beta_st}{3}
-\newcommand{\params_beta_st}{3}
-\newcommand{\params_beta_x}{{'White': 0.3, 'Black': 0.7}}
-\newcommand{\params_beta_a}{{'White': 0.3, 'Black': 0.9}}
-\newcommand{\params_beta_w}{{'White': 0.9, 'Black': 0.2}}
-\newcommand{\params_H}{{'Black': {'N': 20}, 'White': {'N': 80}}}
-\newcommand{\params_L}{{'Black': {'N': 180}, 'White': {'N': 20}}}
-\newcommand{\params_Z_H}{{'mu': 0, 'sigma': 0.5}}
-\newcommand{\params_Z_L}{{'mu': 0, 'sigma': 0.5}}
-\newcommand{\params_x_geo}{{'mu': 0, 'sigma': 0.5}}
-\newcommand{\params_x_reg}{{'mu': 0, 'sigma': 0.5}}
-\newcommand{\params_CC}{{'mu': 0, 'sigma': 0.1}}
-\newcommand{\params_x}{{'mu': 0, 'sigma': 0.1}}
-\newcommand{\params_epsilon_H}{{'mu': 2, 'sigma': 0.1}}
-\newcommand{\params_epsilon_L}{{'mu': 1, 'sigma': 0.1}}
-\newcommand{\params_epsilon_a}{{'mu': 0, 'sigma': 0.1}}
+\newcommand{\paramsJ}{100}
+\newcommand{\paramsEduTypes}{['H', 'L']}
+\newcommand{\paramsRaceTypes}{['White', 'Black']}
+\newcommand{\paramsGammaHh}{-0.2}
+\newcommand{\paramsGammaHl}{0.3}
+\newcommand{\paramsGammaLl}{-0.5}
+\newcommand{\paramsGammaLh}{0.7}
+\newcommand{\paramsAlphaHh}{0.8}
+\newcommand{\paramsAlphaHl}{0.1}
+\newcommand{\paramsAlphaLh}{0.2}
+\newcommand{\paramsAlphaLl}{0.7}
+\newcommand{\paramsIota}{0.05}
+\newcommand{\paramsPhi}{1}
+\newcommand{\paramsPhiGeo}{0.3}
+\newcommand{\paramsPhiReg}{0.4}
+\newcommand{\paramsPhiA}{3}
+\newcommand{\paramsZeta}{0.8}
+\newcommand{\paramsBetaSt}{3}
+\newcommand{\paramsBetaXWhite}{0.7}
+\newcommand{\paramsBetaXBlack}{0.7}
+\newcommand{\paramsBetaAWhite}{1.5}
+\newcommand{\paramsBetaABlack}{0.9}
+\newcommand{\paramsBetaWWhite}{1.5}
+\newcommand{\paramsBetaWBlack}{2.2}
+\newcommand{\paramsHBlackN}{40}
+\newcommand{\paramsHWhiteN}{160}
+\newcommand{\paramsLBlackN}{180}
+\newcommand{\paramsLWhiteN}{20}
+\newcommand{\paramsZHMu}{0}
+\newcommand{\paramsZHSigma}{0.5}
+\newcommand{\paramsZLMu}{0}
+\newcommand{\paramsZLSigma}{0.5}
+\newcommand{\paramsXGeoMu}{0}
+\newcommand{\paramsXGeoSigma}{0.5}
+\newcommand{\paramsXRegMu}{0}
+\newcommand{\paramsXRegSigma}{0.5}
+\newcommand{\paramsCcMu}{0}
+\newcommand{\paramsCcSigma}{0.01}
+\newcommand{\paramsXMu}{0}
+\newcommand{\paramsXSigma}{0.01}
+\newcommand{\paramsEpsilonHMu}{2}
+\newcommand{\paramsEpsilonHSigma}{0.01}
+\newcommand{\paramsEpsilonLMu}{1}
+\newcommand{\paramsEpsilonLSigma}{0.01}
+\newcommand{\paramsEpsilonAMu}{0}
+\newcommand{\paramsEpsilonASigma}{0.01}
